# phishield

./: .env.dist  .gitignore  README.md  docker-compose.yml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  pm2.json
.devcontainer/traefik/certs/: cert.pem  key.pem
.github/workflows /: releases.yml
backend/: Dockerfile  pyproject.toml
backend/phishield/: __init__.py  __main__.py  base.py  cli.py  conf.py  lifespan.py
backend/phishield/apps/email/: router.py
backend/phishield/apps/email/models/: email.py
backend/phishield/apps/email/routers/: __init__.py  analyse.py
backend/phishield/apps/email/schemas/: response.py
backend/phishield/common/models/: file.py  google.py  virustotal.py
backend/phishield/common/utils/: __init__.py  email.py  file.py  prompt.py
backend/phishield/worker/: __init__.py  app.py  utils.py
data_science/: sender.py  test_sender.ipynb
front-end/: code.js  settings.html  sidebar.html
front_end/: Common.js  Gmail.js  appsscript.json  code.js  code.json  reportPhishing.html  settings.html  sidebar.html
frontend/: Common.js  appsscript.json
production/: .env.dist  docker-compose-production.yml  nginx.conf
