[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "phishield"
version = "0.0.1"
description = "API"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # API
    "fastapi==0.109.1",
    "fastapi-limiter===0.1.5",
    "starlette-context==0.3.6",
    "uvicorn==0.24.0.post1",
    "loguru==0.7.2",
    "pydantic==2.6.3",
    "pydantic-settings==2.0.3",
    "pydantic_core==2.16.3",
    "fastapi-pagination",
    "fastapi_pagination==0.12.14",
    "httpx==0.27.0",
    
    # Worker
    "dramatiq[redis,watch]==1.15.0",

    # Database
    "sqlalchemy==2.0.28",
    "psycopg2-binary==2.9.5",

    # Utils
    "requests==2.31.0",
    "aioboto3==12.0.0",
    "minio==7.2.5",
    "eml_parser==1.17.5",
    "python-multipart==0.0.9",
    "vt-py==0.18.2",
    "html2text==2024.2.26",
    "dkimpy==1.1.6",
    "aioredis==2.0.1",

    # Engine
    "validators==0.21.1",

    # Google
    "google-cloud-aiplatform==1.38",
    "google-generativeai==0.5.2",
]

[project.scripts]
phishield = "phishield:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v*"]

[tool.hatch.envs.default]
type = "virtual"
develop = ["."]
dependencies = [
    "ruff==0.1.5",
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "debugpy==1.8.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["phishield"]
relative-imports-order = "furthest-to-closest"
lines-after-imports = 2

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Ignore `F401` (imported but unused) in all `__init__.py` files
# Ignore `F403` (unable to detect undefined names) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"